<resources>
    <string name="app_name">SolgikB</string>
    <string name="my_home_lib"><i>우리집 도서관</i></string>

    <!-- Main Activity -->
    <string name="maintab1">도서관</string>
    <string name="maintab2">내 서재</string>

    <!-- Home Fragment -->
    <string name="today_recommend">오늘의 추천도서</string>
    <string name="search_result">검색 결과</string>

    <!-- MyLib Fragment -->
    <string name="my_info">내 정보</string>
    <string name="check_status">대출 현황</string>
    <string name="term_format" formatted="false"> (%s ~ %s)</string>
    <string name="prev_check_list">이전 대출 내역</string>

    <!-- PrevLib Activity -->
    <string name="week_filter">1주</string>
    <string name="month_filter">1개월</string>
    <string name="three_month_filter">3개월</string>
    <string name="set_term_filter">기간 설정</string>
    <string name="book_status_borrow"><u>대출중</u></string>

    <!-- Icon Description -->
    <string name="notice_btn">알림버튼</string>
    <string name="search_btn">검색버튼</string>
    <string name="edit_btn">편집버튼</string>

</resources>