<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="vm" type="com.example.solgikb.ui.main.home.HomeViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <TextView
            android:id="@+id/title"
            android:text="서울시립도서관"
            style="@style/subTitle.homeTitle"
            android:onClick="@{() -> vm.onRecMain()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/search_box"
            android:text="@={vm.searchbooktitle}"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_box_height"
            android:layout_marginStart="@dimen/search_box_s_margin"
            android:paddingLeft="10dp"
            android:layout_marginEnd="@dimen/search_box_e_margin"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/main_title_margin"
            android:textSize="@dimen/sub_title_textsize"
            android:background="@drawable/custom_search_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:layout_width="@dimen/search_ic_width"
            android:layout_height="@dimen/search_box_height"
            android:contentDescription="@string/search_btn"
            android:src="@drawable/ic_search"
            android:onClick="@{() -> vm.onClickSearch()}"
            android:background="@drawable/custom_search_ic_background"
            app:layout_constraintEnd_toStartOf="@id/search_box"
            app:layout_constraintTop_toTopOf="@id/search_box" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/today_recommend_margin"
            android:id="@+id/rv_layout"
            android:visibility="visible"
            android:background="@color/back_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_box">

            <TextView
                android:id="@+id/today_recommend"
                android:text="@string/today_recommend"
                style="@style/mainTitle.todayRecommend"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/book_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:recycler_items="@{vm.bookLiveData}"
                app:recycler_adapter="@{vm.recyclerAdapter}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/today_recommend"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/today_recommend_margin"
            android:visibility="gone"
            android:id="@+id/sr_layout"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_box">

            <TextView
                android:id="@+id/search_result_text"
                android:text="@string/search_result"
                style="@style/mainTitle.todayRecommend"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/book_search_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="none"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:overScrollMode="never"
                app:recycler_items="@{vm.bookLiveData}"
                app:recycler_adapter="@{vm.recyclerAdapter}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_result_text"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            app:fabSize="normal"
            android:src="@drawable/bookcart"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>